<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <android.support.v7.widget.Toolbar
        android:id="@+id/event_creation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/search_contacts_event_creation"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/event_creation_title"
        app:titleTextColor="@android:color/white" />

    <com.pchmn.materialchips.ChipsInput
        android:id="@+id/search_contacts_event_creation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        app:hint="@string/event_creation_artists_hint"
        app:layout_constraintTop_toBottomOf="@id/event_creation_toolbar" />

    <ScrollView
        android:id="@+id/event_creation_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_contacts_event_creation">

        <LinearLayout
            android:id="@+id/event_creation_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/event_creation_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/event_creation_event_name" />

            <EditText
                android:id="@+id/event_creation_city_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/event_creation_city_state" />

            <EditText
                android:id="@+id/event_creation_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/event_creation_tags" />

            <EditText
                android:id="@+id/event_creation_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:focusable="false"
                android:text="@string/event_creation_select_date" />
        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/event_creation_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_accent_48dp"
        app:layout_constraintEnd_toEndOf="@id/event_creation_scrollview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:tint="@android:color/white"
        android:layout_margin="32dp"/>


</android.support.constraint.ConstraintLayout>