<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bookyrself.bookyrself.views.fragments.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/cardview_light_background"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_what"
            style="@style/SearchViewStyleWhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:queryHint="@string/search_what_query_hint" />

        <fragment
            android:layout_below="@+id/appBarLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:id="@+id/search_where"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/search_where_query_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/from_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_light_background"
                android:text="From"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/to_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_light_background"
                android:text="To"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="Search!"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/users_toggle"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:text="@string/users_toggle_option_search"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/events_toggle"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:text="@string/events_toggle_option_search"
                android:textAlignment="center" />

        </RadioGroup>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="@dimen/bottom_navigation_bar_height">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <include
            layout="@layout/empty_state_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/navigation"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scrollbars="vertical" />
    </RelativeLayout>
</RelativeLayout>
