<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/user_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_layout_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.bookyrself.bookyrself.views.activities.UserDetailActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_user_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:titleTextColor="@color/colorAccentLight" />
            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:id="@+id/user_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize">

                <ProgressBar
                    android:id="@+id/profile_image_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:translationZ="2dp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <!--Main Info Card -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:contentPadding="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="167dp">

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/left_guideline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_percent="0.05" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/right_guideline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_percent="0.95" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/center_guideline_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_percent="0.35" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/top_guideline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintGuide_percent="0.05" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/bottom_guideline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintGuide_percent="1.0" />


                            <ImageView
                                android:id='@+id/profile_image_user_detail_activity'
                                android:layout_width="96dp"
                                android:layout_height="96dp"
                                android:layout_gravity="start"
                                android:layout_margin="16dp"
                                android:contentDescription="@string/profile_image_content_desc"
                                app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
                                app:layout_constraintHorizontal_bias="0.50"
                                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                                app:layout_constraintRight_toLeftOf="@id/center_guideline_vertical"
                                app:layout_constraintTop_toTopOf="@id/top_guideline"
                                app:layout_constraintVertical_bias="0.0" />

                            <TextView
                                android:id="@+id/username_user_detail_activity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:gravity="center_horizontal"
                                android:maxLines="1"
                                android:text="@string/username_user_detail"
                                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                                app:autoSizeTextType="uniform"
                                app:layout_constraintBottom_toTopOf="@id/city_state_user_detail_activity"
                                app:layout_constraintLeft_toRightOf="@id/center_guideline_vertical"
                                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                                app:layout_constraintTop_toTopOf="@+id/top_guideline" />

                            <TextView
                                android:id="@+id/city_state_user_detail_activity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginStart="8dp"
                                android:gravity="center_horizontal"
                                android:maxLines="1"
                                android:text="Location"
                                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                                app:autoSizeTextType="uniform"
                                app:layout_constraintBottom_toTopOf="@id/tags_user_detail_activity"
                                app:layout_constraintHorizontal_bias="1.0"
                                app:layout_constraintLeft_toRightOf="@id/center_guideline_vertical"
                                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                                app:layout_constraintTop_toBottomOf="@id/username_user_detail_activity" />

                            <TextView
                                android:id="@+id/tags_user_detail_activity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:gravity="center_horizontal"
                                android:maxLines="1"
                                android:text="@string/tags_user_detail"
                                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                                app:autoSizeTextType="uniform"
                                app:layout_constraintBottom_toTopOf="@id/user_url_user_detail_activity"
                                app:layout_constraintLeft_toRightOf="@id/center_guideline_vertical"
                                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                                app:layout_constraintTop_toBottomOf="@id/city_state_user_detail_activity" />

                            <TextView
                                android:id="@+id/user_url_user_detail_activity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginStart="8dp"
                                android:gravity="center_horizontal"
                                android:maxLines="1"
                                android:text="@string/website_user_detail"
                                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                                app:autoSizeTextType="uniform"
                                app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
                                app:layout_constraintLeft_toRightOf="@id/center_guideline_vertical"
                                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                                app:layout_constraintTop_toBottomOf="@id/tags_user_detail_activity" />

                            <ImageView
                                android:id="@+id/add_user_to_contacts_imageview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:padding="8dp"
                                android:src="@drawable/ic_person_outline_black_24dp"
                                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                                app:layout_constraintRight_toLeftOf="@id/email_user_detail_activity_image"
                                app:layout_constraintTop_toBottomOf="@id/profile_image_user_detail_activity" />

                            <ImageView
                                android:id="@+id/email_user_detail_activity_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:padding="8dp"
                                android:src="@drawable/ic_messages_black_24dp"
                                app:layout_constraintLeft_toRightOf="@id/add_user_to_contacts_imageview"
                                app:layout_constraintRight_toLeftOf="@id/center_guideline_vertical"
                                app:layout_constraintTop_toBottomOf="@id/profile_image_user_detail_activity" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        app:contentPadding="16dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <TextView
                                android:id="@+id/bio_header_user_detail_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="Bio"
                                android:textAppearance="@android:style/TextAppearance.Material.Title" />

                            <TextView
                                android:id="@+id/bio_body_user_detail_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/bio_header_user_detail_activity"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center_horizontal"
                                android:text="bio placeholder blah blah blah"
                                android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                        </RelativeLayout>

                        <include
                            android:id="@+id/user_detail_empty_state"
                            layout="@layout/empty_state_template"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                            android:id="@+id/user_detail_calendar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>